Update message to include a name
Added a paragraph with the name 'Abhinaya' to the message.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="confetti-container"></div>
 
 <button class="btn-3d" onclick="showMsg()">Touch Me 🥰</button>
-<div id="message">🎉 Happy New Year, welcome to 2026 🎉</div>
+<div id="message">🎉 Happy New Year, welcome to 2026 🎉<p>Abhinaya</p></p></div>
 
 <script>
   function showMsg() {
