Update New Year message with a heart emoji

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <div id="confetti-container"></div>
 
 <button class="btn-3d" onclick="showMsg()">Touch Me 🥰</button>
-<div id="message">🎉 Happy New Year, welcome to 2026 🎉<p>Abhinaya</p></p></div>
+<div id="message">🎉 Happy New Year ❤️, welcome to 2026 🎉
+  <p>Abhinaya</p> </div>
 
 <script>
   function showMsg() {
