--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 
 <script src="hearts.js"></script>
 <div class="burst-hearts"></div>
+<audio id="bgMusic" loop>
+    <source src="music.mp3" type="audio/mpeg">
+</audio>
 
 </body>
 </html>
