Revise New Year message in index.html
Updated New Year message with a personal note.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <button class="btn-3d" onclick="showMsg()">Touch Me 🥰</button>
 <div id="message">🎉 Happy New Year ❤️, welcome to 2026 🎉
-  <p>Abhinaya</p> </div>
+  <p>Abhinaya As this new year begins, I just want you to know how grateful I am for you. You make my days brighter, my heart lighter, and my life so much better just by being in it. I’m excited for all the memories we’ll create, the laughs we’ll share, and the dreams we’ll chase together. No matter what this year brings, I’m thankful that I get to face it with you. I love you—today, tomorrow, and all year long ✨</p> </div>
 
 <script>
   function showMsg() {
