Update content in index.html
Removed New Year greeting and added a quote.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="Body">
-    <h1 class="heading">This is for the special person 💗</h1>
     <div class="para">
-        <p class="p1">Happy New Year! 🎉✨</p>
-        <p class="p">May this year bring you happiness, good health, and success in everything you do. Thank you for being such a wonderful G-friend—wishing you many smiles and great memories ahead.</p></div>
     <div class="hearts">
   <span>💗</span>
   <span>💕</span>
@@ -19,10 +16,8 @@
   <span>💕</span>
 </div>
 <div id="confetti-container"></div>
+        <h1>“I don’t like you the way I once did, and I regret how much time I gave to something that wasn’t right.”</h1>
 
-<button class="btn-3d" onclick="showMsg()">Touch Me 🥰</button>
-<div id="message">🎉 Happy New Year ❤️, welcome to 2026 🎉
-  <p>Abhinaya As this new year begins, I just want you to know how grateful I am for you. You make my days brighter, my heart lighter, and my life so much better just by being in it. I’m excited for all the memories we’ll create, the laughs we’ll share, and the dreams we’ll chase together. No matter what this year brings, I’m thankful that I get to face it with you. I love you—today, tomorrow, and all year long ✨</p> </div>
 
 <script>
   function showMsg() {
