Update content in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   <span>💕</span>
 </div>
 <div id="confetti-container"></div>
-        <h1>“I don’t like you the way I once did, and I regret how much time I gave to something that wasn’t right.”</h1>
+        <p>05-02-2026</p>
+        <h1>Randon Files Store</h1>
+        <h2>Pappy</h2>
+        <p>First time we met at Asmangadh.</p>
+        <p>Should say (****) on 15th Feb</p>
 
 
 <script>
