Update heading and add trial page message

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <div id="confetti-container"></div>
         <p>05-02-2026</p>
         <h1>Randon Files Store</h1>
-        <h2>Pappy</h2>
+        <p>Trial page</p>
+        <h2>Pappy💝</h2>
         <p>First time we met at Asmangadh.</p>
-        <p>Should say (****) on 15th Feb</p>
+        <p>Wish on 24th Fed</p>
 
 
 <script>
