--- a/index.html
+++ b/index.html
@@ -1,58 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head >
-
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Happy Birthday 🎂</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="Body">
-    <div class="para">
-    <div class="hearts">
-  <span>💗</span>
-  <span>💕</span>
-  <span>💖</span>
-  <span>💕</span>
+<body>
+
+<h1 class="title">Happy Birthday 🎉</h1>
+
+<h2>My love 🎂❤️</h2>
+<p>Every day without you feels incomplete.
+I’m counting the moments until I can see you again.
+I miss you so much, and I love you more than words can ever say.</p>
+
+<button id="birthdayBtn">Click Me!</button>
+<div id="birthdayPopup" class="popup">
+  <p class="para">🎉 Happy Birthday, my Cutie Girl! 🎂 <br>
+  Happiest 17th birthday! 💖 <br>
+  I wish you all the success and happiness in life, and I’ll always be here to support you. Love you forever! 💕
+  </p>
+  <div id="ageCountdown"></div>
+  <button id="closePopup">Close</button>
 </div>
-<div id="confetti-container"></div>
-        <p>05-02-2026</p>
-        <h1>Randon Files Store</h1>
-        <p>Trial page</p>
-        <h2>Pappy💝</h2>
-        <p>First time we met at Asmangadh.</p>
-        <p>Wish on 24th Fed</p>
 
 
-<script>
-  function showMsg() {
-    document.getElementById("message").classList.add("show");
-    launchConfetti();
-  }
 
-  function launchConfetti() {
-    const container = document.getElementById("confetti-container");
+<!-- Falling photos container -->
+<div id="falling-container"></div>
 
-    for (let i = 0; i < 30; i++) {
-      const confetti = document.createElement("div");
-      confetti.classList.add("confetti");
-      confetti.innerHTML = "🎉";
-      confetti.style.left = Math.random() * 100 + "vw";
-      confetti.style.animationDuration = 2 + Math.random() * 2 + "s";
-
-      container.appendChild(confetti);
-
-      setTimeout(() => confetti.remove(), 3000);
-    }
-  }
-</script>
-<div class="hearts"></div>
-
-<script src="hearts.js"></script>
-<div class="burst-hearts"></div>
-<audio id="bgMusic" loop>
-    <source src="music.mp3" type="audio/mpeg">
-</audio>
-
+<script src="script.js"></script>
 </body>
 </html>
