Add completion message for design code
Added a paragraph indicating completion of design code.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ I miss you so much, and I love you more than words can ever say.</p>
   <button id="closePopup">Close</button>
 </div>
 
+    
+    <p>Completed design code in file Love24FEB/password=22**04*24#Vi23+Tu17 </p>
 
 
 <!-- Falling photos container -->
